Anpassungen Nutzung in 3DViewer SPA
- Eigenes IconSet erstellt
- href='#' aus allen a tags entfernt um keine Browser Statusanzeige zu haben
- Cursor fuer Contextmenu festgelegt

- entsprechend grunt file angepasst

--- a/src/themes/base.less
+++ b/src/themes/base.less
@@ -47,7 +47,7 @@
 	li {
 		list-style:none;
 		> a {
-			display:block; padding:0 2em 0 2em; text-decoration:none; width:auto; color:black; white-space:nowrap; line-height:2.4em; text-shadow:1px 1px 0 white; border-radius:1px;
+			display:block; padding:0 2em 0 2em; text-decoration:none; width:auto; color:black; white-space:nowrap; line-height:2.4em; text-shadow:1px 1px 0 white; border-radius:1px;cursor:pointer;
 			&:hover { position:relative; background-color:#e8eff7; box-shadow:0 0 2px #0a6aa1; }
 			&.vakata-context-parent { background-image:url("data:image/gif;base64,R0lGODlhCwAHAIAAACgoKP///yH5BAEAAAEALAAAAAALAAcAAAIORI4JlrqN1oMSnmmZDQUAOw=="); background-position:right center; background-repeat:no-repeat; }
 		}
